Deprecated since jdk9 replacing constructor instance of Double and Float
Replacing Deprecated datatype constructors